...
    public const val Inputs: String = "Inputs"
    public const val Buttons: String = "Buttons"
    public const val Display: String = "Display"
    public const val Feedback: String = "Feedback"
    public const val Navigation: String = "Navigation"
    public const val Layout: String = "Layout"
    public const val Overlays: String = "Overlays"
    public const val Data: String = "Data"
    public const val Animation: String = "Animation"
    public const val Graph: String = "Graph"
    public const val Utilities: String = "Utilities"
}

...
